# music-metadata-tool

./: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
mdtool/: CMakeLists.txt  main.cpp  mdtool
mdtool-ui/: CMakeLists.txt  CMakeLists_old.txt  main.cpp  mdtool-ui
mdtool/ffmpeg/: CMakeLists.txt
src/main/: main.ts
src/renderer/: App.tsx
